# halstela

./: .env.example  .gitignore  CLAUDE.md  README.md  ask-resources.json  pyproject.toml  template.yaml
.github/workflows/: ci.yml
.well-known/appspecific/: com.tesla.3p.public-key.pem
docs/construction/: arch-infra-design.md  data-class-design.md
docs/inception/: overal_plan.md  user_stories.md
functions/command_worker/: handler.py
functions/skill/: handler.py
functions/token_proxy/: handler.py
halstela/: __init__.py  config.py  http_client.py  oauth.py  oauth_callback_server.py  token.py
halstela/auth/: oauth.py  oauth_callback_server.py  token.py
halstela/clients/: signed_command_sender.py  tesla_fleet_client.py  worker_invoker.py
halstela/models/: climate_state.py  command_result.py  vehicle.py  worker_command.py
halstela/services/: vehicle_service.py
layers/shared/: Makefile
scripts/: add_key_request.py  add_skill_testers  deploy  deploy_skill.py  deploy_skill.sh  get_battery.py  get_vehicle_data.py  oauth_token.py  register_partner.py  setup_account_linking.py  setup_beta_test  setup_ssm.py  start_air_conditioning.py
skill-package/: README.md  skill.json
tests/: conftest.py
tests/functions/: test_command_worker_handler.py  test_skill_handler.py  test_token_proxy_handler.py
tests/halstela/clients/: test_signed_command_sender.py  test_tesla_fleet_client.py  test_worker_invoker.py
tests/halstela/models/: test_climate_state.py  test_command_result.py  test_vehicle.py  test_worker_command.py
(+1 files in other folders)
