[project]
name = "halstela"
version = "0.2.0"
description = "Tesla Fleet API ツール + Alexa Smart Home Skill"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "aws-sam-cli>=1.100.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
